--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div  class="character_list">
                 <ul class="ch_list">
-                    <li class="item">
+                    <a href="./page.html"> <li class="item">
                         <div class="ch_img">
                             <img id="kitty" src="./img/new_main_crt1.png" width="285px">
                         </div>
@@ -98,7 +98,7 @@
                             <p class=ch_name style="font-weight: 400;"> 헬로키티 </p>
                             <p class="ch_name_e"> HELLO KITTY </p>
                         </div>    
-                    </li>
+                    </li> </a>
                     <li class="item">
                         <div class="ch_img">
                             <img id="melody" src="./img/new_main_crt2.png" width="285px">
