--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanrio Lover Club</title>
+    <title>Sanrio Lovers Club</title>
     <style type="text/css" rel="stylesheet">
 
         body {
@@ -33,6 +33,7 @@
 
     <!---------css----------->
     <link href="./css/index.css" rel="stylesheet">
+    <link href="./css/media_768.css" rel="stylesheet">
 </head>
 <body>
     <!----------------------------헤더-------------------------------->
@@ -42,6 +43,9 @@
                 <div class="header_logo">
                     <img src="./img/logo_2023.png" width="132px" height="36px">
                 </div>
+                <div class="media_ham_menu">
+                    <img src="./img/menu.png">
+                </div>
                 <ul class="header_menu">
                     <li> COMPANY </li>
                     <li> CHARACTER </li>
@@ -49,6 +53,7 @@
                     <li> RECRUIT </li>
                 </ul>
             </div>
+            
         </header>
     </section>
     <!----------------------------바디 -------------------------------->
@@ -66,6 +71,7 @@
             </div>
             <div class="main_title_img">
                 <img src="./img/main_visual_pc_v1.png" width="1000px">
+                <img src="./img/main_visual_m_v1.png">
             </div>
             <div class="mouse_ani">
                 <div class="mouse">
@@ -391,6 +397,10 @@ $(document).ready(function(){
         }
     });
 });
+/*--------------반응형 스크롤 시 탑버튼 등장---------------*/
+
+
+
 </script>
 </body>
 </html>
