--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
                 <div class="header_logo">
                     <img src="./img/logo_2023.png" width="132px" height="36px">
                 </div>
-                <div class="media_ham_menu">
+                <div class="media_ham_icon">
                     <img src="./img/menu.png">
+                    <ul class="media_ham_menu">
+                        <li> COMPANY </li>
+                        <li> CHARACTER </li>
+                        <li> PLACE </li>
+                        <li> RECRUIT </li>
+                    </ul>
                 </div>
                 <ul class="header_menu">
                     <li> COMPANY </li>
