--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <div class="media_ham_icon">
                     <img src="./img/menu.png">
                     <ul class="media_ham_menu">
-                        <li> COMPANY </li>
+                        <!-- <li> COMPANY </li>
                         <li> CHARACTER </li>
                         <li> PLACE </li>
-                        <li> RECRUIT </li>
+                        <li> RECRUIT </li> -->
                     </ul>
                 </div>
                 <ul class="header_menu">
