--- a/index.html
+++ b/index.html
@@ -356,13 +356,14 @@
             
             <div class="map">
                 <div class="map_img">
-                    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.0077472601206!2d127.05558447642845!3d37.50773542749694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5620f03876f%3A0x16b673eabfffb535!2z7JeU7JSo7YOA7JuMMQ!5e0!3m2!1sko!2skr!4v1706754583579!5m2!1sko!2skr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.0077472601206!2d127.05558447642845!3d37.50773542749694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5620f03876f%3A0x16b673eabfffb535!2z7JeU7JSo7YOA7JuMMQ!5e0!3m2!1sko!2skr!4v1706754583579!5m2!1sko!2skr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="map_txt">
-                    <p class="map_01"> 서울시 강남구 테헤란로 509, 4층 (삼성동,<br> 엔씨타워1) </p>
+                    <p class="map_01"> 서울시 강남구 테헤란로 509, 4층 (삼성동, 엔씨타워1) </p>
                     <p class="map_02"> 509, TEHERANRO, GANGNAM-GU, SEOUL<br>
                         (4TH FLOOR, SAMSUNG-DONG, NC TOWER 1) </p>
-                    <p class="map_03"> <em class="colorm"> M </em>: webmaster@sanriokorea.co.kr <br>
+                    <p class="map_03">
+                        <em class="colorm"> M </em>: webmaster@sanriokorea.co.kr <br>
                         <em class="colorm"> T </em> : +82 (0) 2 543 3810 <br>
                         <em class="colorm"> F </em> : +82 (0) 2 543 2904 </p>    
                 </div>
