--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
                     <p class="map_03">
                         <em class="colorm"> M </em>: webmaster@sanriokorea.co.kr <br>
                         <em class="colorm"> T </em> : +82 (0) 2 543 3810 <br>
-                        <em class="colorm"> F </em> : +82 (0) 2 543 2904 </p>    
+                        <em class="colorm"> F </em> : +82 (0) 2 543 2904
+                    </p>    
                 </div>
                 <img id="kitty_car" src="./img/contact_img.png">
             </div>
