--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <div class="header_logo">
                     <img src="./img/logo_2023.png" width="132px" height="36px">
                 </div>
-                <div class="media_ham_icon">
-                    <img src="./img/menu.png">
+                <div class="media_menu_wrap">
+                    <img id="media_ham_icon" src="./img/menu.png">
                     <ul class="media_ham_menu">
-                        <!-- <li> COMPANY </li>
+                        <li> COMPANY </li>
                         <li> CHARACTER </li>
                         <li> PLACE </li>
-                        <li> RECRUIT </li> -->
+                        <li> RECRUIT </li>
                     </ul>
                 </div>
                 <ul class="header_menu">
@@ -405,6 +405,14 @@ $(document).ready(function(){
             $(".top").hide();
         }
     });
+});
+/*--------------햄메뉴---------------*/
+
+
+$("#media_ham_icon").on("click",function(){
+    $(".media_ham_menu").css(
+        "visibility","visible"
+    ).toggle();
 });
 
 
